# billaroo

./: .coveragerc  .gitignore  .pylintrc  README.md  design_log.md  pyproject.toml
.github/workflows/: checkin.yml
configs/: baseline_scenario.yaml
docs/: action_chain_model.rst  demo_workflow.rst  design_constitution.rst  project_charter.rst  repository_layout.rst
scripts/: checkin.sh
src/synthetic_billing/: _validation.py  exceptions.py  synthetic_billing_cli.py
src/synthetic_billing/actions/: action_chain.py  action_protocols.py  billing_actions.py  lifecycle_actions.py
src/synthetic_billing/actions/test/: test_action_chain.py  test_action_protocols.py  test_billing_actions.py  test_lifecycle_actions.py
src/synthetic_billing/contracts/: account_contracts.py  catalog_contracts.py  event_contracts.py  id_contracts.py  invoice_contracts.py  subscriber_contracts.py  subscription_contracts.py
src/synthetic_billing/contracts/test/: test_account_contracts.py  (+6 more)
src/synthetic_billing/emit/: manifest_emitter.py  raw_file_emitter.py
src/synthetic_billing/model/: account_model.py  billing_model.py  catalog_model.py  lifecycle_model.py  money_model.py  subscriber_model.py  subscription_model.py
src/synthetic_billing/simulate/: behavior_model.py  month_driver.py  population_builder.py  random_stream.py  scenario_config.py  simulation_result.py  simulation_state.py
src/synthetic_billing/test/: repo_scan.py  test_exceptions.py  test_file_basename_uniqueness.py  test_synthetic_billing_cli.py  test_validated_construction_guard.py  test_validation.py
(+16 files in other folders)
